--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+button{
+  margin: 5px;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card{
+  display: inline-block;
+  width: 15.99%;
+  vertical-align: top;
+  padding: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.image{
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+  max-width: -webkit-fill-available;
+  max-height: -webkit-fill-available;
+}
+
+@media only screen and (max-width: 900px) {
+  .card{
+    width: 31.99%;
+    padding: 15px;
   }
+  .image{
+      width: 30vw;
+      height: 30vw;
+  } 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+@media only screen and (max-width: 500px) {
+  .card{
+    width: 100%;
+  }
+  .image{
+      width: 80vw;
+      height: 80vw;
+  }     
+}
+
+.card:hover{
+  opacity: 0.8;
+  transition: all .2s ease;
+}
+
+.user-input-search-history{
+  background: gainsboro;
+  margin: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.user-input-search-history-selected {
+  background: black;
   color: white;
+  margin: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  margin: 20px;
+  padding: 10px;
 }
